# ProgrammingTestAddressIP

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/programmingipaddresstest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  address_ip.cpp  native-lib.cpp
app/src/main/java/com/example/programmingipaddresstest/: MainActivity.java
app/src/main/java/com/example/programmingipaddresstest/api/: ApiInterface.java  ApiService.java  RetrofitClient.java
app/src/main/java/com/example/programmingipaddresstest/models/: IpAddress.java  ServerNatResponse.java
app/src/main/java/com/example/programmingipaddresstest/viewmodels/: IpAddressViewModel.java
app/src/main/res/drawable/: green_ok_icon.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/programmingipaddresstest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
